# person-identification

./: README.md
classification/audio/Original/: Test_Person.m  Test_Person_ours.m  Test_Temp.m  Train_Person_ours.m  main.m  test.m  train.m
classification/combined/: skel_surf_feat1.mat
framework/: CMakeLists.txt  License.txt
framework/Examples/: CMakeLists.txt  GeodesicDistanceExample.cxx  GeodesicPathExample.cxx
framework/HeadPose/: .gitignore  Common.cpp  Common.h  Enums.h  GeodesicFeatures.cpp  GeodesicFeatures.h  Global_def.h  IDX.hpp  IMU.cpp  IMU.h  Kinect_Thread.cpp  Kinect_Thread.h  Model.cpp  Model.h  MultilayerPerceptron.cpp  MultilayerPerceptron.h  PipelineGovernor.h  Quaternion.cpp  RenderWindowUISingleInheritance.cpp  RenderWindowUISingleInheritance.h  SampleUtilities.h  Serial.cpp  Serial.h  SkeletonFeatures.cpp  SkeletonFeatures.h  XbimuReceiver.cpp  XbimuReceiver.h  cmakelists.txt  form.bak  form.ui  mlp_tuned.json  program.cpp  qtGenMoc.bat  stdafx.cpp
framework/Latex/: document.tex~
framework/Testing/: .CMakeLists.txt.swp
head_pose/: .gitignore  Common.cpp  Common.h  Enums.h  Global_def.h  IDX.hpp  IMU.cpp  IMU.h  Kinect_Thread.cpp  Kinect_Thread.h  Model.cpp  MultilayerPerceptron.cpp  Quaternion.h  RenderWindowUISingleInheritance.cpp  RenderWindowUISingleInheritance.h  Serial.cpp  Serial.h  XbimuReceiver.cpp  cmakelists.txt  form.bak  form.ui  program.cpp  qtGenMoc.bat  stdafx.cpp
results/audio_codebook/: results.txt
results/audio_knn/: Accuracy.txt
results/video_knn_-1/: With.xlsx
results/video_knn_no_-1/: Without.xlsx
(+130 files in other folders)
